# langchain-rs

./: .env.example  Cargo.toml
src/: default_agent_prompt.hbs  lib.rs
src/openai_api/: chat.rs  client.rs  embeddings.rs  files.rs  fine_tuning.rs  mod.rs
